[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/StoryModeMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/story-mode/tracks-title.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/vcr.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/AnimatedAtlas.gd" type="Script" id=4]

[node name="StoryModeMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="Color" type="ColorRect" parent="BG"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Dificulty" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Dificulty"]
position = Vector2( 1077, 509 )

[node name="ArrowLeft" type="Sprite" parent="Dificulty"]
position = Vector2( 874, 464 )
centered = false
script = ExtResource( 4 )

[node name="ArrowRight" type="Sprite" parent="Dificulty"]
position = Vector2( 1278, 464 )
centered = false
script = ExtResource( 4 )

[node name="Weeks" type="Node2D" parent="."]
position = Vector2( 640, 442 )

[node name="Preview" type="Node2D" parent="."]

[node name="Window" type="ColorRect" parent="Preview"]
margin_top = 56.0
margin_right = 1280.0
margin_bottom = 442.0

[node name="Background" type="Sprite" parent="Preview"]
position = Vector2( 0, 56 )
centered = false

[node name="Actors" type="Node2D" parent="Preview"]

[node name="Dad" type="Sprite" parent="Preview/Actors"]
position = Vector2( 189, 397 )
centered = false
script = ExtResource( 4 )

[node name="Gf" type="Sprite" parent="Preview/Actors"]
position = Vector2( 622, 397 )
centered = false
script = ExtResource( 4 )

[node name="Bf" type="Sprite" parent="Preview/Actors"]
position = Vector2( 1069, 397 )
centered = false
script = ExtResource( 4 )

[node name="TracksTitle" type="Sprite" parent="."]
position = Vector2( 189, 502 )
texture = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
modulate = Color( 0.698039, 0.698039, 0.698039, 1 )
margin_left = 622.0
margin_top = 6.0
margin_right = 945.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "?"
align = 2

[node name="TracksLabel" type="Label" parent="."]
modulate = Color( 0.898039, 0.341176, 0.466667, 1 )
margin_left = 17.0
margin_top = 539.0
margin_right = 252.0
margin_bottom = 651.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 3 )
text = "?"
align = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 12.0
margin_top = 6.0
margin_right = 317.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "WEEK SCORE: 0"
